# mpu9250-dmp-rs

./: Cargo.toml  README.md
examples/: scan.rs  scan_dmp.rs
src/: dmp.rs  dmp_constants.rs  lib.rs
